cell hover color depends on active player

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
-    <h1>
-        tic tac toe
-    </h1>
+    <h1>tic tac toe</h1>
     <p>it's <span id="player-x" class="x"></span> against <span id="player-o" class="o"></span></p>
     <div id="ttt-grid">
         <button class="cell" data-i = "0" data-j = "0"></button>
