--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
-    <title>Tic Tac Toe</title>
+    <title>tic tac toe</title>
 </head>
 <body>
     <h1>tic tac toe</h1>
