added aria-label for cells

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <h1>tic tac toe</h1>
     <p>it's <span id="player-x" class="x"></span> against <span id="player-o" class="o"></span></p>
     <div id="ttt-grid">
-        <button class="cell" data-i = "0" data-j = "0"></button>
-        <button class="cell" data-i = "0" data-j = "1"></button>
-        <button class="cell" data-i = "0" data-j = "2"></button>
-        <button class="cell" data-i = "1" data-j = "0"></button>
-        <button class="cell" data-i = "1" data-j = "1"></button>
-        <button class="cell" data-i = "1" data-j = "2"></button>
-        <button class="cell" data-i = "2" data-j = "0"></button>
-        <button class="cell" data-i = "2" data-j = "1"></button>
-        <button class="cell" data-i = "2" data-j = "2"></button>
+        <button class="cell" data-i = "0" data-j = "0" aria-label="row 0, col 0"></button>
+        <button class="cell" data-i = "0" data-j = "1" aria-label="row 0, col 1"></button>
+        <button class="cell" data-i = "0" data-j = "2" aria-label="row 0, col 2"></button>
+        <button class="cell" data-i = "1" data-j = "0" aria-label="row 1, col 0"></button>
+        <button class="cell" data-i = "1" data-j = "1" aria-label="row 1, col 1"></button>
+        <button class="cell" data-i = "1" data-j = "2" aria-label="row 1, col 2"></button>
+        <button class="cell" data-i = "2" data-j = "0" aria-label="row 2, col 0"></button>
+        <button class="cell" data-i = "2" data-j = "1" aria-label="row 2, col 1"></button>
+        <button class="cell" data-i = "2" data-j = "2" aria-label="row 2, col 2"></button>
     </div>
     <p id="display"><span id="game-state">current player: </span><span id="player"></span></p>
 </body>
